--- a/src/styles/sass/App.scss
+++ b/src/styles/sass/App.scss
@@ -31,11 +31,7 @@ ul {
 .app {
     position: relative;
     height: 100%;
-    display: flex;
-    background-color: gray;
-    // position: relative;
-    // display: flex;
-    flex-direction: column;
+    background-color: #f4f9ff;
 }
 
 .scroll-to-top{
