--- a/src/styles/sass/_Fontes.scss
+++ b/src/styles/sass/_Fontes.scss
@@ -33,3 +33,8 @@
     font-family: "OpenSans";
     src: url("../fonts/OpenSans-Regular.ttf");
 }
+
+@font-face{
+    font-family: "Mont-Semi";
+    src: url("../fonts/Montserrat-SemiBold.ttf");
+}
