--- a/src/styles/css/Grafico.css
+++ b/src/styles/css/Grafico.css
@@ -34,35 +34,79 @@
   src: url("../fonts/OpenSans-Regular.ttf");
 }
 
-.grafico-container {
+@font-face {
+  font-family: "Mont-Semi";
+  src: url("../fonts/Montserrat-SemiBold.ttf");
+}
+
+.chart-container {
   display: flex;
   flex-direction: column;
-  height: 30em;
+  height: 45em;
   width: 100%;
+  border: 0.05rem green solid;
   justify-content: center;
   align-items: center;
   background-color: #edf1ff;
 }
 
-.grafico-container .Grafico {
+.chart-container .Grafico {
   background-color: #edf1ff;
   border-radius: 5px;
-  height: 100%;
+  height: 90%;
   width: 95%;
   padding: 1rem;
 }
 
-.grafico-container .grafico-header {
+.chart-container .chart-header {
   display: flex;
   width: 50%;
   margin-top: 2rem;
 }
 
-.grafico-container .grafico-header h2 {
+.chart-container .chart-header h2 {
   width: 100%;
   font-family: Mont-Medium;
   font-size: 3rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
   color: #125c6d;
+}
+
+.chart-container .chart-nav {
+  width: 90%;
+  margin-bottom: 1em;
+}
+
+.chart-container .chart-nav .chart-buttons {
+  align-items: center;
+  display: flex;
+  padding: 0.2em;
+}
+
+.chart-container .chart-nav .chart-buttons li {
+  padding: 0.2em 0;
+}
+
+.chart-container .chart-nav .chart-buttons li button {
+  font-family: Mont;
+  font-size: 0.8em;
+  color: #A5AE9D;
+  border: 0.1em solid #A5AE9D;
+  background: #edf1ff;
+  border-radius: 0.4em;
+  padding: 0.5em;
+  margin-right: .5em;
+  cursor: pointer;
+}
+
+.chart-container .chart-nav .chart-buttons li button:hover {
+  color: #007A91;
+  border-color: #007A91;
+}
+
+.chart-container .chart-nav .chart-buttons li button:focus {
+  color: #000;
+  background: #A5AE9D;
+  border: 0.1em solid #A5AE9D;
 }
