--- a/src/styles/css/Main.css
+++ b/src/styles/css/Main.css
@@ -34,6 +34,11 @@
   src: url("../fonts/OpenSans-Regular.ttf");
 }
 
+@font-face {
+  font-family: "Mont-Semi";
+  src: url("../fonts/Montserrat-SemiBold.ttf");
+}
+
 @media (max-width: 800px) {
   .main {
     width: 100%;
