--- a/src/styles/sass/Conversor.scss
+++ b/src/styles/sass/Conversor.scss
@@ -3,20 +3,18 @@
 .Conversor {
     display: flex;
     flex-direction: column;
-    // justify-content: center;
-    // padding: 0 1.5em;
     background: #edf1ff;
-    height: 100%;
-    width: 28em;
-    // box-shadow: .1rem .1rem .1rem .1rem;
+    height: 15em;
+    width: 30em;
     border-radius: .2rem;
-    
+    margin: auto;
     .flag-container {
         // border: 0.1em red solid;
         display: flex;
-        margin-bottom: 2em;
         align-items: center;
-        padding: 1em 1.5em;
+        height: 30%;
+        padding-left: 1em;
+        // padding: 1em 1.5em;
         // padding: 0 1.5em;
         background: #125c6d;
         
@@ -30,29 +28,29 @@
             color: #edf1ff;
             margin-left: 0.5em;
             font-size: 1.2rem;
+            font-family: Mont;
         }
     }
 
     .input-container {
-        display: flex;
-        margin-right: 1em;
-        margin-top: 0.5em;
-        align-self: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        height: 70%;
+        place-items: center;
+        padding: 1em;
         p {
-            margin-left: 2em;
-            margin-top: 1em;
-            // margin-right: 0.5em;
-
+            padding-left: .5em;
             .cifrao {
                 font-size: 3rem;
-                color: #000;
-                font-family: Mont-Regular;
+                color: #29313A;
+                font-family: Mont-Semi;
             }
         }
         .input-valor {
-            font-family: Quicksand;
-            color: #000;
+            font-family: Mont-Semi;
+            color: #29313A;
             border: none;
+            margin-right: .3em;
             background: #edf1ff;
             border-bottom: 0.03em #ccc solid;
             font-size: 4rem;
@@ -76,21 +74,16 @@
         }
     }
 }
-.conversor-destino {
-    background: #f4f9ff;
-    border-left: 0.1em white solid;
-    .input-container {
-        .input-destino {
-            background: #f4f9ff;
+
+
+@media (max-width: 1024px) {
+    .Conversor{
+        width: 25em;
+
+        .input-container {
+            .input-valor{
+                width: 4em;
+            }
         }
-    }
-}
-
-@media (max-width: 860px) {
-    .Conversor {
-        flex-direction: column;
-        margin: 1em;
-        
-
     }
 }
