--- a/src/styles/sass/Grafico.scss
+++ b/src/styles/sass/Grafico.scss
@@ -1,11 +1,11 @@
 @import "_Fontes";
 
-.grafico-container {
+.chart-container {
     display: flex;
     flex-direction: column;
-    height: 30em;
+    height: 45em;
     width: 100%;
-    // border: 0.05rem green solid;
+    border: 0.05rem green solid;
     justify-content: center;
     align-items: center;
     background-color: #edf1ff;
@@ -13,11 +13,11 @@
         // border: 0.05rem green solid;
         background-color: #edf1ff;
         border-radius: 5px;
-        height: 100%;
+        height: 90%;
         width: 95%;
         padding: 1rem;
     }
-    .grafico-header {
+    .chart-header {
         // border: 0.2rem solid #a7092a;
         display: flex;
         width: 50%;
@@ -30,6 +30,42 @@
             margin-bottom: 2rem;
             color: #125c6d;
             // border: 0.2rem solid #a7092a;
+        }
+    }
+    .chart-nav {
+        width: 90%;
+        // border: 0.2rem solid green;
+        margin-bottom: 1em;
+        .chart-buttons {
+            align-items: center;
+            display: flex;
+            padding: 0.2em;
+            // border: 0.2rem solid red;
+            li {
+                padding: 0.2em 0;
+                button {
+                    font-family: Mont;
+                    font-size: 0.8em;
+                    color: #A5AE9D;
+                    border: 0.1em solid #A5AE9D;
+                    background: #edf1ff;
+                    border-radius: 0.4em;
+                    padding: 0.5em;
+                    margin-right: .5em;
+                    cursor: pointer;
+                    &:hover {
+                        color: #007A91;
+                        border-color: #007A91;
+                    }
+                    &:focus{
+                        color: #000;
+                        background: #A5AE9D;
+                        border: 0.1em solid #A5AE9D;
+                    }
+                }
+
+                
+            }
         }
     }
 }
