--- a/src/styles/css/Footer.css
+++ b/src/styles/css/Footer.css
@@ -42,12 +42,11 @@
 .footer {
   width: 100%;
   display: flex;
+  margin-top: auto;
   justify-content: center;
   background: #29313a;
   height: 5em;
-  position: relative;
-  bottom: 0;
-  left: 0;
+  /****old footer***/
   font-family: OpenSans;
 }
 
