--- a/src/styles/sass/App.scss
+++ b/src/styles/sass/App.scss
@@ -13,11 +13,16 @@ body {
     font-size: 1rem;
     overflow: hidden;
     background: #f4f9ff;
+    height: auto;
     min-height: 100vh;
+    scroll-padding-top: 3.8em;
+    
     // line-height: 1.3;
 }
 html {
     overflow: auto;
+    // margin-top: 3.8em;
+    scroll-padding-top: 3.8em;
 }
 
 a {
@@ -29,8 +34,10 @@ ul {
 }
 
 .app {
+    // margin-top: 3.8em;
+    
     position: relative;
-    height: 100%;
+    min-height: 100%;
     background-color: #f4f9ff;
 }
 
