--- a/src/styles/sass/Footer.scss
+++ b/src/styles/sass/Footer.scss
@@ -3,12 +3,15 @@
 .footer {
     width: 100%;
     display: flex;
+    margin-top:auto;
     justify-content: center;
     background: #29313a;
     height: 5em;
-    position: relative;
-    bottom: 0;
-    left: 0;
+    
+    /****old footer***/
+    // position: relative;
+    // bottom: 0;
+    // left: 0;
     font-family: OpenSans;
     ul {
         width: 90em;
